# frm

./: .eslintrc.cjs  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  postcss.config.cjs  stylelint.config.cjs  svelte.config.js  vite.config.ts
client/lib/: api.ts  command.ts  display.ts  function.ts  iteration.ts  keys.ts  rate.ts  stream.ts
client/lib/components/: Band.svelte  Debug.svelte  Svg.svelte  Tag.svelte
client/lib/components/svg/: Container.svelte  G.svelte  Line.svelte  Point.svelte  Text.svelte
client/lib/components/svg/layout/: Grid.svelte
client/lib/graphics/: math.ts
client/lib/state/: bisect.ts  control.ts  grid.ts  image-cache.ts  index.ts  input.ts  range.ts  reducer.ts  select.ts  seq.ts  store.ts  stream.ts
client/lib/types/: graphics.ts  template.ts  theme.ts
client/lib/utils/: index.ts  svg.ts
client/routes/: +layout.svelte  +page.svelte  App.svelte  Grid.svelte  Sequence.svelte  StoreProvider.svelte  Timecode.svelte  frame.svelte
client/routes/test/: +page.svelte  Bisect.svelte
src/: main.rs
src/ffmpeg/: cmd.rs  error.rs  frame.rs  frame_range.rs  mod.rs  path.rs  sample.rs  sequence.rs  subtitle.rs
src/ffmpeg/proc/: mod.rs
src/server/: mod.rs  state.rs
templates/: sample.hbs
