[package]
name = "frm"
version = "0.1.0"
authors = ["Matt Palmer <palmer.s.matt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
rayon = "1.2.0"
warp = "0.1.20"
handlebars = "2.0.2"
serde_json = "1.0.40"
serde = "1.0.101"
