[package]
name = "frm"
version = "0.1.0"
authors = ["Matt Palmer <palmer.s.matt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
handlebars = "2.0.2"
serde_json = "1.0.40"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
nom = "7.1.3"
lru = "0.10.0"
rodio = "0.17.1"
axum = {version = "0.6.18", features = ["tokio"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14.26", features = ["full"] }
tower = "0.4.13"
